# GameOfLife

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  winConfigureAndBuild.bat
src/: GameOfLife.cpp  GameOfLife.hpp  GameOfLifeAlgorithm.hpp  ProjectConfig.hpp.in
src/app/: GameOfLifeApp.cpp  GameOfLifeApp.hpp  GameOfLifeMain.cpp  GameOfLifeSimpleMain.cpp
src/cpu/: GameOfLifeCpu.cpp  GameOfLifeCpu.hpp  Semaphore.hpp
src/gpu/: CudaManager.cu  CudaManager.hpp  GameOfLifeCuda.cu  GameOfLifeCuda.hpp  GameOfLifeThrust.cu  GameOfLifeThrust.hpp
src/gpu/cuda_helpers/: helper_cuda.h
src/testing/: AllTimingUnitTests.cpp  CpuMultiThreadUnitTests.cpp  CpuUnitTests.cpp  CudaUnitTests.cpp  ThrustUnitTests.cpp
